src/App.css
@import "portfolio/projects.css";

:root {
	--line-color: #e95d00;
	--profile-bg-color: hsl(40, 100%, 70%);
	--nontech-tag-color: hsl(76, 49%, 38%);
}

html {
	background-color: white !important;
  	scrollbar-gutter: stable;
}

body {
  margin: 0;
  place-items: start center;
  width: 100%;
  overflow-x: hidden;
  scrollbar-gutter: stable;
}

#wrapper {
	padding-bottom: 2em;
}

.section {
	max-width: 100%;
}

#canvas-wrapper {
	position: absolute;
	z-index: -1;
	/*left: 50%;*/
	overflow: hidden;
	width: 100vw;
	height: 100vh;
}

#background-canvas {
	image-rendering: -moz-crisp-edges;
	image-rendering: -webkit-crisp-edges;
	image-rendering: pixelated;
	image-rendering: crisp-edges;
	/*left: -50%;*/
	position: fixed;
  	height: calc(100% + 100px);
	width: 100%;
	height: 100%;
}

#root {
  	width: 100%;
}

/*#root > * {
	max-width: 1000px;
}*/

h1 {
	margin-top: 50px;
	margin-bottom: 180px;
	font-size: 5em;
	color: #fff !important;
}

h2, h3, p, .whitebox {
	color: #444;
}

h1, h2 { text-align: center; width: 100%;}
h1 { color: white; }

.org_logo { /* Logos of workplaces and educational insts */ 
	max-width: 200px;
	max-height: 200px;
}

.name_title {
	padding-top: 3em;
	padding-bottom: 4em;
	font-weight: bold;
}

/*#region Timeline */
#timeline {
	width: 100%;
	place-content: center;
	position: relative;
	max-width: 900px;
	margin: auto;

	#line {
		border-top: 5px solid white;
		border-color: var(--line-color);
		position: relative;
		margin-top: 150px;
		margin-bottom: 250px;;
	}
	#line:after {
		content: "";
		border: 6px solid var(--line-color);
		position: absolute;
		top: -8px;
		border-radius: 100%;
		display: none;
	}
	#line:before {
		content: "";
		width: 15px;
		height: 15px;
		border-bottom: 5px solid var(--line-color);
		border-right: 5px solid var(--line-color);
		position: absolute;
		right: 0;
		transform: rotate(-45deg);
		top: -12px;
	}

	.line_year {
		position: absolute;
		display: flex;
		bottom: 10px;
		flex-direction: column;
		gap: 5px;
	}

	.point {
		content: "";
		background-color: var(--line-color);
		width: 24px;
		height: 24px;
		color: white !important;
		border-radius: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
		box-sizing: border-box;
		cursor: pointer;
		position: relative;

		transition: transform 0.5s, translate 0.5s, margin-top 0.5s;

		&:hover {
			transform: scale(1.3);
			translate: 0 -8px 0;
			margin-top: 8px;
		}

		.MuiIcon-root { 
			width: 100%;
			height: 100%;
			animation: icon_to_white 0.1s forwards;
		}

		animation-name: tech_animation;
		animation-duration: 0.5s;
	}
	.point:after {
		position: absolute;
		width: 3px;
		height: 10px;
		bottom: -10px;
		background-color: var(--line-color);
		content: "";

	}

	.tech {
		transform: rotate(-45deg);
		display: flex;
		position: absolute;
		top: -5px;
		transition: transform 0.5s;

		&:hover {
			transform: scale(1.2) rotate(-41deg);
		}

		span { 
			display: block;
			cursor: default;
			padding: 1px 10px;
			border-radius: 5px;
			font-weight: bold;
			font-size: 0.9em;
			background-color: var(--line-color);
			color: white !important;
			right: 5px;
			position: absolute;
			text-wrap: nowrap;
			top: 20px;
			
			animation-name: tech_animation;
			animation-duration: 1s;
			animation-timing-function: ease;
		 }
	}

}

.tag {
	float: left;
	margin-top: 0.5em;
	transition: transform 0.5s;
	cursor: default;
	padding: 1px 10px;
	border-radius: 5px;
	font-weight: bold;
	font-size: 0.9em;
	background-color: var(--nontech-tag-color);
	color: white !important;
	text-wrap: nowrap;

	&:nth-child(1n + 1) {
		margin-right: 0.5em;
	}
}

.tag.tech {
	background-color: var(--line-color);
}

.point_label {
	text-align: center;
	font-size: 1.2em;
	color: #444;
}

@keyframes tech_animation {
	from { transform: scale(0); color: white; }
	to { transform: scale(1); color: white; }
}

@keyframes icon_to_white {
	from { color: white; }
	to { color: white }
}

.years_of_exp {
	text-align: center;
	font-size: 2.5em;
	font-weight: bold;

	span {
		font-weight: normal;
		font-size: 0.8em;
	}
}

/*#endregion*/

.profile {
	text-align: center;
	width: 100%;
	max-width: 800px;
	margin: auto;

	.self_image {
		border-radius: 100%;
		max-width: 250px;
	}
}

.contact_info {

	max-width: 600px;
	margin: auto;

	span {
		color: #333;
	}

	img {
		width: 80px;
		height: 80px; 

		transition: transform 0.3s;

		&:hover {
			transform: scale(1.15);
		}
	}
}


@media (max-width: 900px) {
	.whitebox {
		max-width: 92% !important;
		background-color: white;
		border-radius: 8px;
		padding: 2em 1em;
		margin: auto;
	}
	h1 {
		margin-bottom: 0;
		margin-top: 20px;
	}

}

.self-image {

	border-radius: 100%;
	max-width: 70%;
}

.sidebar {
	/* width: 300px; */

	max-width: 100%;
	flex-grow: 0;
	flex-shrink: 0;
	padding: 1em;
	gap: 20px;
	display: flex;
	flex-flow: column nowrap;
	box-sizing: border-box;
}

.sidebar-box {
	background-color: white;
	border-radius: 15px;
	padding: 1em;
	box-sizing: border-box;
}

.left-wrapper {
    display: flex;
    flex-wrap: wrap; 
	flex-direction: column;
    gap: 20px;
    padding: 1em;
	padding-left: 2em;
    justify-content: flex-start;
}

